--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "^11.0.3",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-elements": "^3.4.2",
-    "react-native-mask-input": "^1.2.0",
-    "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
